edit User class